<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:elevation="@dimen/_4sdp"
        app:cardElevation="@dimen/_4sdp"
        android:clipToPadding="true"
        app:cardCornerRadius="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_300"
                android:includeFontPadding="false"
                android:text="@string/add_new_category"
                android:textColor="@color/text_color"
                android:textSize="@dimen/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <FrameLayout
                android:id="@+id/edCatHolder"
                android:layout_width="0sp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_edittext"
                android:elevation="@dimen/_2sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTitle">

                <EditText
                    android:id="@+id/edCategory"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_35sdp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/poppins_300"
                    android:hint="@string/add_new_category"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingStart="@dimen/_20sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/typing" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:src="@drawable/ic_add_car" />

            </FrameLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edCatHolder">

                <TextView
                    android:id="@+id/txtCat"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button"
                    android:fontFamily="@font/poppins_400"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/btn_text_size"
                    app:layout_constraintEnd_toStartOf="@+id/guidEnd"
                    app:layout_constraintStart_toStartOf="@+id/guidStart"
                    app:layout_constraintTop_toBottomOf="@+id/crdPasswordHolder" />

                <TextView
                    android:id="@+id/txtAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button"
                    android:fontFamily="@font/poppins_400"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/add"
                    android:textColor="@color/white"
                    android:textSize="@dimen/btn_text_size"
                    app:layout_constraintEnd_toStartOf="@+id/guidEnd"
                    app:layout_constraintStart_toStartOf="@+id/guidStart"
                    app:layout_constraintTop_toBottomOf="@+id/crdPasswordHolder" />


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>